# claudemd-forge

./: .gitignore  .gitleaks.toml  BUILD_GUIDE.md  CHANGELOG.md  CLAUDE.md  README.md  action.yml  pyproject.toml  vercel.json
.claude-plugin/: plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  secret-scan.yml  security.yml
docs/: MONETIZATION.md  index.html
docs/marketing/: reddit-claude-ai.md  reddit-cursor.md  show-hn.md  substack.md
license_server/: Dockerfile  __init__.py  config.py  database.py  email_delivery.py  fly.toml  key_gen.py  litestream.yml  main.py  models.py  pyproject.toml  requirements.txt  stripe_webhooks.py
license_server/migrations/: 001_initial_schema.sql  002_add_product_column.sql  003_add_bundle_support.sql
license_server/routes/: revoke.py  usage.py  validate.py
license_server/scripts/: restore.sh
packs/: README.md
packs/django-pro/: CLAUDE.md
packs/fastapi-pro/: CLAUDE.md
packs/nextjs-pro/: CLAUDE.md
packs/rust-pro/: CLAUDE.md
prompts/: 01_foundation.md  02_scanner.md  03_analyzers.md  04_generators.md  05_cli.md  06_auditor.md  07_templates.md  08_publish.md
scripts/: keygen.py  stripe_setup.py  stripe_setup_aicards.py
skills/anchormd-audit/: SKILL.md
skills/anchormd-generate/: SKILL.md
src/anchormd/: __init__.py  __main__.py  ci.py  cleanup.py  cli.py  config.py  exceptions.py  gates.py  licensing.py  machine_id.py  models.py  scanner.py  telemetry.py
src/anchormd/analyzers/: __init__.py  commands.py  domain.py  github.py  harvest.py  language.py  patterns.py  reality.py  skills.py  suggestions.py  tech_debt.py
src/anchormd/drift/: __init__.py  cli.py  fixer.py  generator.py  models.py  reporter.py  runner.py  scorer.py  storage.py  trend.py
src/anchormd/drift/adapters/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py
src/anchormd/drift/templates/: report.html
src/anchormd/generators/: __init__.py  auditor.py  composer.py  patcher.py  sections.py
src/anchormd/generators/checkers/: __init__.py  accuracy.py  anti_patterns.py  coverage.py  freshness.py  specificity.py
src/anchormd/templates/: __init__.py  frameworks.py  presets.py
src/claudemd_forge/: ci.py  cli.py  config.py  exceptions.py  gates.py  licensing.py  models.py  scanner.py  telemetry.py
src/claudemd_forge/analyzers/: __init__.py  patterns.py  skills.py
src/claudemd_forge/drift/: cli.py
src/claudemd_forge/generators/: composer.py  sections.py
tests/: conftest.py  test_analyzers.py  test_auditor.py  test_checkers.py  test_ci.py  test_cleanup.py  test_cli.py  test_docs_consistency.py  test_gates.py  test_generators.py  test_github_analyzer.py  test_harvest.py  test_integration.py  test_licensing.py  test_machine_id.py  test_models.py  test_patcher.py  test_reality.py  test_scanner.py  test_suggestions.py  test_tech_debt.py  test_telemetry.py  test_templates.py  test_web_security.py
tests/drift/: test_adapters.py  test_cli.py  test_fixer.py  test_generator.py  test_models.py  test_reporter.py  test_runner.py  test_scorer.py  test_storage.py  test_trend.py
tests/license_server/: conftest.py  test_activate.py  test_database.py  test_email_delivery.py  test_health.py  test_key_gen.py  test_models.py  test_multi_product.py  test_rate_limit.py  test_revoke.py  test_stripe_webhooks.py  test_usage.py  test_validate.py
web/: Dockerfile  app.py  fly.toml  generator.py
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
web/frontend/src/: App.jsx  AuthContext.jsx  ReposPage.jsx  api.js  index.css  main.jsx
